@@ -1,3 +1,13 @@
+2002-07-31  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkPanedWindow.c (PanedWindowReqProc): Postpone pane
+	arrangement until idle, as is done in other window managers, to
+	fix problems with size calculations when the children don't
+	already know their sizes anyway.
+
+	* unix/configure: Regen.
+	* unix/tcl.m4: Update from Tcl.
+
 2002-07-29  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/configure: Regen.
